[metadata]
name = statxplore
# Also update __version__ in src/statxplore/__init__.py
version = 0.0.1-1
author = Joe Heffer
author_email = j.heffer@sheffield.ac.uk
description = This is a data harvester for the Department for Work and Pensions Stat-Explore
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/urban-flows/stat-xplore
project_urls =
    Bug Tracker = https://github.com/urban-flows/stat-xplore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    statxplore = statxplore.__main__:main
